--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,28 @@
 <body>
 
 <header>
-    <h1>Contact Us</h1>
+    <h1>AI Voice Spoof Detection System</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+        <a href="index.html#working">How It Works</a>
+        <a href="index.html#detect">Detect</a>
         <a href="contact.html">Contact</a>
     </nav>
 </header>
 
-<section>
+<section class="contact-section">
     <h2>Get in Touch</h2>
     <p>
-        Email: aispoofdetect@example.com <br><br>
-        Phone: +91 98765 43210 <br><br>
-        Address: AI Research Lab, India
+        Have questions about voice spoof detection?  
+        Feel free to contact our team.
     </p>
+
+    <div class="contact-box">
+        <p><strong>Email:</strong> aispoofdetect@example.com</p>
+        <p><strong>Phone:</strong> +91 98765 43210</p>
+        <p><strong>Address:</strong> AI Research Lab, India</p>
+    </div>
 </section>
 
 <footer>
