--- a/contact.html
+++ b/contact.html
@@ -18,23 +18,26 @@
     </nav>
 </header>
 
-<section class="contact-section">
-    <h2>Get in Touch</h2>
-    <p>
-        Have questions about voice spoof detection?  
-        Feel free to contact our team.
-    </p>
+<main>
+    <section class="contact-section">
+        <h2>Get in Touch</h2>
+        <p>
+            Have questions about voice spoof detection?  
+            Feel free to contact our team.
+        </p>
 
-    <div class="contact-box">
-        <p><strong>Email:</strong> aispoofdetect@example.com</p>
-        <p><strong>Phone:</strong> +91 98765 43210</p>
-        <p><strong>Address:</strong> AI Research Lab, India</p>
-    </div>
-</section>
+        <div class="contact-box">
+            <p><strong>Email:</strong> aispoofdetect@example.com</p>
+            <p><strong>Phone:</strong> +91 98765 43210</p>
+            <p><strong>Address:</strong> AI Research Lab, India</p>
+        </div>
+    </section>
+</main>
 
 <footer>
     © 2026 AI Voice Spoof Detection Project
 </footer>
 
 </body>
+
 </html>
