--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +11,13 @@
 <header>
     <h1>About This Project</h1>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="howitworks.html">How It Works</a>
+    <a href="index.html#detect">Detect</a>
+    <a href="contact.html">Contact</a>
     </nav>
+
 </header>
 
 <section>
