--- a/about.html
+++ b/about.html
@@ -14,9 +14,10 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="howitworks.html">How It Works</a>
-    <a href="index.html#detect">Detect</a>
+    <a href="detect.html">Detect</a>
     <a href="contact.html">Contact</a>
-    </nav>
+</nav>
+
 
 </header>
 
