--- a/howitworks.html
+++ b/howitworks.html
@@ -9,13 +9,14 @@
 
 <header>
     <h1>AI Voice Spoof Detection System</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="howitworks.html">How It Works</a>
-        <a href="index.html#detect">Detect</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+   <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="howitworks.html">How It Works</a>
+    <a href="detect.html">Detect</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
 </header>
 
 <main>
