--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 </head>
 <body>
 
-    
 <header>
     <h1>AI Voice Spoof Detection System</h1>
     <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="howitworks.html">How It Works</a>
-    <a href="detect.html">Detect</a>
-    <a href="contact.html">Contact</a>
-</nav>
-
-
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="howitworks.html">How It Works</a>
+        <a href="detect.html">Detect</a>
+        <a href="contact.html">Contact</a>
+    </nav>
 </header>
+
+<main>
 
 <section class="hero">
     <h2>Detect Spoofed Voice Calls Using AI</h2>
@@ -29,35 +28,16 @@
     </p>
 </section>
 
-<section id="working">
-    <h2>How It Works</h2>
-    <div class="card-container">
-        <div class="card">
-            <h3>Audio Input</h3>
-            <p>User uploads a voice call recording.</p>
-        </div>
-        <div class="card">
-            <h3>Feature Extraction</h3>
-            <p>MFCC and spectral features are extracted.</p>
-        </div>
-        <div class="card">
-            <h3>AI Detection</h3>
-            <p>AI model classifies real vs spoofed audio.</p>
-        </div>
-        <div class="card">
-            <h3>Result</h3>
-            <p>Instant fraud detection result shown.</p>
-        </div>
-    </div>
+<section>
+    <h2>Why This Project Matters</h2>
+    <p>
+        Voice cloning and deepfake technologies are increasingly being used
+        for fraud, impersonation, and identity misuse. Our system helps detect
+        manipulated or AI-generated voices to enhance user security and prevent scams.
+    </p>
 </section>
 
-<section id="detect">
-    <h2>Upload Voice File</h2>
-    <div class="upload-box">
-        <input type="file" accept="audio/*"><br>
-        <button>Analyze Voice</button>
-    </div>
-</section>
+</main>
 
 <footer>
     © 2026 AI Voice Spoof Detection Project
