--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +20,7 @@
 
 </header>
 
+<main>
 <section>
     <h2>Project Overview</h2>
     <p>
@@ -39,6 +39,7 @@
         <li>Improve call authentication security</li>
     </ul>
 </section>
+</main>
 
 <footer>
     © 2026 AI Voice Spoof Detection Project
