--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <header>
     <h1>AI Voice Spoof Detection System</h1>
     <nav>
-        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="howitworks.html">How It Works</a>
         <a href="detect.html">Detect</a>
@@ -26,15 +25,20 @@
         An AI-powered system to identify fake and spoofed voice calls generated
         using voice cloning and deepfake technology.
     </p>
+    <a href="detect.html"><button>Get Started</button></a>
 </section>
 
 <section>
-    <h2>Why This Project Matters</h2>
-    <p>
-        Voice cloning and deepfake technologies are increasingly being used
-        for fraud, impersonation, and identity misuse. Our system helps detect
-        manipulated or AI-generated voices to enhance user security and prevent scams.
-    </p>
+    <div class="card-container">
+        <div class="card">
+            <h2>Why This Project Matters</h2>
+            <p>
+                Voice cloning and deepfake technologies are increasingly being used
+                for fraud, impersonation, and identity misuse. Our system helps detect
+                manipulated or AI-generated voices to enhance user security and prevent scams.
+            </p>
+        </div>
+    </div>
 </section>
 
 </main>
