Refactor project overview and objectives into cards

--- a/about.html
+++ b/about.html
@@ -22,22 +22,26 @@
 
 <main>
 <section>
-    <h2>Project Overview</h2>
-    <p>
-        Voice spoofing is a growing cybersecurity threat where attackers use
-        AI-generated voices to impersonate real people.
-        This project focuses on detecting such spoofed calls using
-        machine learning and signal processing techniques.
-    </p>
+    <div class="card-container">
+        <div class="card">
+            <h2>Project Overview</h2>
+            <p>
+                Voice spoofing is a growing cybersecurity threat where attackers use
+                AI-generated voices to impersonate real people.
+                This project focuses on detecting such spoofed calls using
+                machine learning and signal processing techniques.
+            </p>
+        </div>
 
-    <br>
-
-    <h2>Objectives</h2>
-    <ul>
-        <li>Detect AI-generated and cloned voices</li>
-        <li>Prevent voice-based fraud</li>
-        <li>Improve call authentication security</li>
-    </ul>
+        <div class="card">
+            <h2>Objectives</h2>
+            <ul>
+                <li>Detect AI-generated and cloned voices</li>
+                <li>Prevent voice-based fraud</li>
+                <li>Improve call authentication security</li>
+            </ul>
+        </div>
+    </div>
 </section>
 </main>
 
