--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
         <h2>Get in Touch</h2>
         <p>
             Have questions about voice spoof detection?  
-            Feel free to contact our team.
+            Feel free to contact our team. We're here to help!
         </p>
 
         <div class="contact-box">
             <p><strong>Email:</strong> aispoofdetect@example.com</p>
-            <p><strong>Phone:</strong> +91 98765 43210</p>
+            <p><strong>Phone:</strong> 7012701513</p>
             <p><strong>Address:</strong> AI Research Lab, India</p>
         </div>
     </section>
