--- a/detect.html
+++ b/detect.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detect - AI Voice Spoof Detection</title>
+    <title>Contact - AI Voice Spoof Detection</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
     <h1>AI Voice Spoof Detection System</h1>
-    <nav>
+   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="howitworks.html">How It Works</a>
@@ -17,26 +17,23 @@
     <a href="contact.html">Contact</a>
 </nav>
 
+
 </header>
 
 <main>
-<section>
-    <h2>Voice Spoof Detection</h2>
-    <p>
-        Upload a voice recording below to analyze whether the audio
-        is genuine or spoofed using our AI model.
-    </p>
+    <section class="contact-section">
+        <h2>Get in Touch</h2>
+        <p>
+            Have questions about voice spoof detection?  
+            Feel free to contact our team. We're here to help!
+        </p>
 
-    <div class="upload-box">
-        <input type="file" accept="audio/*"><br>
-        <button>Analyze Voice</button>
-
-        <div class="result-box" style="margin-top: 20px;">
-            <!-- Result will appear here later -->
-            <p><strong>Result:</strong> Waiting for analysis...</p>
+        <div class="contact-box">
+            <p><strong>Email:</strong> aispoofdetect@example.com</p>
+            <p><strong>Phone:</strong> 7012701513</p>
+            <p><strong>Address:</strong> AI Research Lab, India</p>
         </div>
-    </div>
-</section>
+    </section>
 </main>
 
 <footer>
@@ -44,4 +41,5 @@
 </footer>
 
 </body>
+
 </html>
