--- a/login.html
+++ b/login.html
@@ -5,36 +5,36 @@
     <title>Login - AI Voice Spoof Detection</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-<header>
-    <h1>AI Voice Spoof Detection System</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="howitworks.html">How It Works</a>
-        <a href="about.html">About</a>
-        <a href="detect.html">Detect</a>
-        <a href="contact.html">Contact</a>
-        <a href="login.html">Login</a>
-    </nav>
-</header>
+<body class="login-body">
 
 <section class="login-section">
     <div class="login-box">
-        <h2>User Login</h2>
-        <p>Login to access the voice detection system</p>
+        <h2>AI Voice Spoof Detection</h2>
+        <p>Login to continue</p>
 
-        <form>
-            <input type="text" placeholder="Username" required><br>
-            <input type="password" placeholder="Password" required><br>
+        <form onsubmit="return loginUser()">
+            <input type="text" id="username" placeholder="Username" required><br>
+            <input type="password" id="password" placeholder="Password" required><br>
             <button type="submit">Login</button>
         </form>
     </div>
 </section>
 
-<footer>
-    © 2026 AI Voice Spoof Detection Project
-</footer>
+<script>
+function loginUser() {
+    const user = document.getElementById("username").value;
+    const pass = document.getElementById("password").value;
+
+    if (user === "admin" && pass === "1234") {
+        localStorage.setItem("loggedInUser", user);
+        window.location.href = "index.html";   // go to home
+        return false;
+    } else {
+        alert("Invalid username or password");
+        return false;
+    }
+}
+</script>
 
 </body>
 </html>
