--- a/login.html
+++ b/login.html
@@ -4,30 +4,155 @@
     <meta charset="UTF-8">
     <title>Login - AI Voice Spoof Detection</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .login-body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #0f172a, #020617);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login-box {
+            background: #0b1220;
+            padding: 40px;
+            border-radius: 12px;
+            width: 320px;
+            text-align: center;
+            box-shadow: 0 0 25px rgba(0,0,0,0.5);
+        }
+
+        .login-box h2 {
+            color: #38bdf8;
+            margin-bottom: 10px;
+        }
+
+        .login-box p {
+            color: #9ca3af;
+            margin-bottom: 20px;
+        }
+
+        .login-box input {
+            width: 100%;
+            padding: 12px;
+            margin: 8px 0;
+            border-radius: 6px;
+            border: none;
+            outline: none;
+        }
+
+        .login-box button {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+            background: #38bdf8;
+            border: none;
+            border-radius: 6px;
+            color: black;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .login-box button:hover {
+            background: #0ea5e9;
+        }
+
+        .switch-text {
+            margin-top: 15px;
+            color: #9ca3af;
+            font-size: 14px;
+        }
+
+        .switch-text a {
+            color: #38bdf8;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body class="login-body">
 
 <section class="login-section">
     <div class="login-box">
         <h2>AI Voice Spoof Detection</h2>
-        <p>Login to continue</p>
+        <p id="formTitle">Login to continue</p>
 
-        <form onsubmit="return loginUser()">
-            <input type="text" id="username" placeholder="Username" required><br>
-            <input type="password" id="password" placeholder="Password" required><br>
-            <button type="submit">Login</button>
+        <!-- LOGIN FORM -->
+        <form id="loginForm" onsubmit="return loginUser()">
+            <input type="text" id="loginUsername" placeholder="Username" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <button type="submit">Sign In</button>
         </form>
+
+        <!-- SIGNUP FORM -->
+        <form id="signupForm" class="hidden" onsubmit="return signupUser()">
+            <input type="text" id="signupUsername" placeholder="Create Username" required>
+            <input type="password" id="signupPassword" placeholder="Create Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+
+        <p class="switch-text">
+            <span id="switchMessage">Don't have an account?</span>
+            <a onclick="toggleForm()" id="switchLink">Sign Up</a>
+        </p>
     </div>
 </section>
 
 <script>
-function loginUser() {
-    const user = document.getElementById("username").value;
-    const pass = document.getElementById("password").value;
+let isLogin = true;
 
-    if (user === "admin" && pass === "1234") {
+function toggleForm() {
+    const loginForm = document.getElementById("loginForm");
+    const signupForm = document.getElementById("signupForm");
+    const title = document.getElementById("formTitle");
+    const message = document.getElementById("switchMessage");
+    const link = document.getElementById("switchLink");
+
+    if (isLogin) {
+        loginForm.classList.add("hidden");
+        signupForm.classList.remove("hidden");
+        title.textContent = "Create a New Account";
+        message.textContent = "Already have an account?";
+        link.textContent = "Sign In";
+    } else {
+        signupForm.classList.add("hidden");
+        loginForm.classList.remove("hidden");
+        title.textContent = "Login to continue";
+        message.textContent = "Don't have an account?";
+        link.textContent = "Sign Up";
+    }
+    isLogin = !isLogin;
+}
+
+function signupUser() {
+    const user = document.getElementById("signupUsername").value;
+    const pass = document.getElementById("signupPassword").value;
+
+    localStorage.setItem("username", user);
+    localStorage.setItem("password", pass);
+
+    alert("Account created successfully! Please login.");
+    toggleForm();
+    return false;
+}
+
+function loginUser() {
+    const user = document.getElementById("loginUsername").value;
+    const pass = document.getElementById("loginPassword").value;
+
+    const storedUser = localStorage.getItem("username");
+    const storedPass = localStorage.getItem("password");
+
+    if (user === storedUser && pass === storedPass) {
         localStorage.setItem("loggedInUser", user);
-        window.location.href = "index.html";   // go to home
+        window.location.href = "index.html";
         return false;
     } else {
         alert("Invalid username or password");
